--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-dom": "19.2.3",
     "react-grid-layout": "^2.2.2",
     "react-leaflet": "^5.0.0",
+    "react-resizable": "^3.1.3",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
@@ -52,6 +54,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-grid-layout": "^1.3.6",
+    "@types/react-resizable": "^3.0.8",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
